compiler/tests/success/test_ptr_fn_noinline.jazz
fn init (reg ptr u64[3] p) -> reg ptr u64[3] {
   inline int i;
   for i = 0 to 3 {
      p[i] = 0;
   }
   return p;
}

export fn foo1() -> reg u64 {
  stack u64[3] s;
  reg ptr u64[3] ps;
  reg u64 r;
  inline int i;
  ps = s;
  ps = init(ps);  
  s = ps;
  r = 0;
  for i = 0 to 3 {
   r += s[i];
  }
  return r;
}

export fn foo2() -> reg u64 {
  stack u64[3] s;
  reg ptr u64[3] ps;
  reg u64 r;
  inline int i;
  ps = s;
  ps = init(ps);  
 
  r = 0;
  for i = 0 to 3 {
   r += ps[i];
  }
  return r;
}

export fn foo3() -> reg u64 {
  stack u64[3] s;
  reg ptr u64[3] ps;
  reg u64 r;
  inline int i;
  ps = init(s);  
 
  r = 0;
  for i = 0 to 3 {
   r += ps[i];
  }
  return r;
}

export fn foo4() -> reg u64 {
  stack u64[3] s;
  reg u64 r;
  inline int i;
  s = init(s);  
 
  r = 0;
  for i = 0 to 3 {
   r += s[i];
  }
  return r;
}

