compiler/tests/fail/test_fn_noline_const_ptr.jazz
fn init (reg const ptr u64[3] p) -> reg ptr u64[3] {
   inline int i;
   for i = 0 to 3 {
      p[i] = 0;
   }
   return p;
}
